--- a/code/d4/03-crud-express/views/new.html
+++ b/code/d4/03-crud-express/views/new.html
@@ -68,51 +68,42 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
-
-          <div class="row placeholders">
-            {{ each infos }}
-            <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>{{ $value }}</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            {{ /each }}
-          </div>
-          <a class="btn btn-success" href="/students/new">添加</a>
-
-          <h2 class="sub-header">Section title</h2>
+          <h2 class="sub-header">添加新信息</h2>
           <div class="table-responsive">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>姓名</th>
-                  <th>性别</th>
-                  <th>年龄</th>
-                  <th>爱好</th>
-                  <th>操作</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{ each studentsInfo }}
-                <tr>
-                  <td>{{ $value.id }}</td>
-                  <td>{{ $value.name }}</td>
-                  <td>{{ $value.gender }}</td>
-                  <td>{{ $value.age }}</td>
-                  <td>{{ $value.hobbies }}</td>
-                  <td>
-                    <a href="/students/edit?id={{ $value.id }}">编辑</a>
-                    <a href="/students/delete?id={{ $value.id }}">删除</a>
-                  </td>
-                </tr>
-                {{ /each }}
-              </tbody>
-            </table>
+            <form action="/students/new" method="post">
+              <div class="form-group">
+                <label for="">name</label>
+                <input type="text" class="form-control" id=""  name="name"        placeholder="name">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">gender</label>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="gender" id="" value="1" checked>男
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="gender" id="" value="0">女
+                  </label>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="">age</label>
+                <input type="number" id="" name="age">
+              </div>
+              <div class="form-group">
+                <label>hobbies</label>
+                <input type="text" name="hobbies">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
           </div>
         </div>
       </div>
     </div>
   </body>
 </html>
+
+
+
